--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - pip install -r requirements_dev.txt
   - pip install -e .
 script:
-  — pytest --cov=mlexp
+  - pytest --cov=mlexp
 after_success:
-  — coveralls
+  - coveralls
